step_3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress.io
  namespace: default
spec:
  rules:
  - host: fe-ingress.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fe-service
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-ingress.io
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /stats
spec:
  rules:
  - host: be-ingress.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: be-service
              port:
                number: 5000
